Fix alignment in become partner form

--- a/src/styles/semantic.scss
+++ b/src/styles/semantic.scss
@@ -62,3 +62,11 @@
         }
     }
 }
+
+.become-partner {
+    .ui {
+        &.steps {
+            margin: 0 1rem;
+        }
+    }
+}
